fix: edit temperature section interface

--- a/weather/index.html
+++ b/weather/index.html
@@ -45,11 +45,11 @@
                         <input type="text" id="search-Input" class="form-control city-name-input" placeholder="Enter city name">
                        
                     </div>
-                    <h1 class="city-name">Hà Nội</h1>
+                    <h1 class="city-name">Nam Định</h1>
                     
                     <div class="text-center mt-4 mb-4">
-                        <h6 class="display-4 temperature mb-0">13°C</h6>
-                        <span class="status small">Stormy</span>
+                        <h6 class="display-4  mb-0"><span class="temperature">27</span><span>°C</span></h6>
+                        <span class="status small">Mưa nhẹ</span>
                     </div>
 
                     <div class="d-flex justify-content-between align-items-center weather-details">
