--- a/weather/index.html
+++ b/weather/index.html
@@ -15,8 +15,8 @@
             <div class="card text-center shadow-5-strong">
                 <div class="card-body">
                     <div class="form-outline mb-4">
-                        <input type="text" id="search-Input" class="form-control" placeholder="Enter city name" />
-                        <label class="form-label" for="search-Input">City Name</label>
+                        <input type="text" id="searchInput" class="searchInput form-control" placeholder="Enter city name" />
+                        <label class="form-label" for="searchInput">City Name</label>
                     </div>
                     <h1 class="city-name h3 mb-3">Nam Định</h1>
                    
@@ -41,5 +41,7 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 <script src="./index.js"></script>
 </html>
