fix: fix UI language sync and temperature correction

--- a/weatherSS2/index.html
+++ b/weatherSS2/index.html
@@ -32,7 +32,7 @@
                 <!-- Weather Box -->
                 <div class="text-center mb-4">
                     <img src="./images/cloud.png" alt="Weather Icon" class="img-fluid img-weather" style="width: 60%;">
-                    <p class="h1 temperature">16<span>°C</span></p>
+                    <p class="h1 temperature-text "><span class="temperature">16</span><span>°C</span></p>
                     <p class="lead description">Broken clouds</p>
                 </div>
 
@@ -42,14 +42,14 @@
                         <i class="bx bx-water display-4 "></i>
                         <div class="ml-3">
                             <p class="h4 mb-1 humidity ">0%</p>
-                            <p class="text-muted mb-0">Humidity</p>
+                            <p class="text-muted mb-0">Độ ẩm</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
                         <i class="bx bx-wind display-4 "></i>
                         <div class="ml-3">
                             <p class="wind h4 mb-1">0 km/h</p>
-                            <p class="text-muted mb-0">Wind</p>
+                            <p class="text-muted mb-0">Tốc độ gió</p>
                         </div>
                     </div>
                 </div>
