--- a/weatherSS2/index.html
+++ b/weatherSS2/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +7,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./index.css">
 </head>
-
 <body>
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
         <div class="card shadow-lg">
@@ -22,22 +19,21 @@
                     <span class="input-group-text bg-transparent border-light">
                         <i class='bx bxs-map text-white'></i>
                     </span>
-                    <input type="text" class="input-city form-control bg-transparent border-light text-white  text-uppercase"
+                    <input type="text"
+                        class="input-city form-control bg-transparent border-light text-white  text-uppercase"
                         placeholder="Nhập thành phố">
                     <button class="search btn btn-transparent border-light ">
                         <i class="bx bx-search text-white" style="font-size: 13px;"></i>
                     </button>
                 </div>
-
                 <!-- Weather Box -->
                 <div class="text-center mb-4">
                     <img src="./images/cloud.png" alt="Weather Icon" class="img-fluid img-weather" style="width: 60%;">
                     <p class="h1 temperature-text "><span class="temperature">16</span><span>°C</span></p>
-                    <p class="lead description">Broken clouds</p>
+                    <p class="lead description">Nhiều mây</p>
                 </div>
-
                 <!-- Weather Detail -->
-                <div class="d-flex justify-content-between align-items-center p-3">
+                <div class="weather-detail d-flex justify-content-between align-items-center p-3">
                     <div class="d-flex align-items-center">
                         <i class="bx bx-water display-4 "></i>
                         <div class="ml-3">
@@ -53,18 +49,12 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </div>
-
     <!-- MDBootstrap JS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-
     <!-- Custom JS -->
     <script src="./index.js"></script>
 </body>
-
 </html>
