fix: fix input error

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="calculator card p-4">
-            <input type="text" id="display" class="form-control mb-3" >
+            <input type="text" id="display" class="form-control mb-3" readonly >
             <div class="row">
                 <div  id="delete" class="col-3 py-3">
                     <button class="clearDisplay btn btn-danger w-100">C</button>
